--- a/n-pod.yml
+++ b/n-pod.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: neo4j.kclproject.site
+  name: k8s.kclproject.site
   labels:
     app: kcl-project
 spec:
