--- a/neo4j-service.yml
+++ b/neo4j-service.yml
@@ -1,10 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-kclproject-site
+  name: k8s-kclproject-site-new
 spec:
   ports:
-  - port: 80
+  - name: http
+    port: 80
+    targetPort: neo4j
+    protocol: TCP
+  - name: https
+    port: 443
     targetPort: neo4j
     protocol: TCP
   selector:
