--- a/nn-pod.yml
+++ b/nn-pod.yml
@@ -9,7 +9,7 @@ spec:
   - name: kcl-project
     image: neo4j
     ports:
-    - containerPort: 7687
-      name: blot
     - containerPort: 7474
-      name: neo4j
+      name: browser
+    - containerPort: 7687
+      name: bolt
