--- a/n-service.yml
+++ b/n-service.yml
@@ -1,16 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-kclproject-site-new
+  name: neo4j
 spec:
   ports:
-  - name: http
-    port: 80
+  - port: 80
     targetPort: neo4j
     protocol: TCP
-  - name: https
-    port: 443
-    targetPort: neo4j
+  - port: 443
+    targetPort: blot
     protocol: TCP
   selector:
     app: kcl-project
