--- a/n-service.yml
+++ b/n-service.yml
@@ -4,10 +4,12 @@ metadata:
   name: neo4j
 spec:
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: neo4j
     protocol: TCP
-  - port: 443
+  - name: https
+    port: 443
     targetPort: blot
     protocol: TCP
   selector:
