--- a/n-service.yml
+++ b/n-service.yml
@@ -6,7 +6,7 @@ spec:
   ports:
   - name: http
     port: 80
-    targetPort: neo4j
+    targetPort: browser
     protocol: TCP
   - name: https
     port: 443
