--- a/section47_Udemy/neo4j-web.yml
+++ b/section47_Udemy/neo4j-web.yml
@@ -3,18 +3,25 @@ kind: Deployment
 metadata:
   name: neo4j-deployment
 spec:
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
         app: neo4j-app
     spec:
       containers:
-      - name: noe4j-demo
+      - name: neo4j-app
         image: neo4j
         ports:
         - name: neo4j-port
           containerPort: 7474
         - name: bolt-port
           containerPort: 7687
-
+        volumeMounts:
+        - mountPath: /data
+          name: data
+      volumes:
+      - name: data
+        nfs:
+          server: us-east-1a.fs-c927b680.efs.us-east-1.amazonaws.com
+          path: /
