--- a/section47/pv-claim.yml
+++ b/section47/pv-claim.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: neo4j-storage
   annotations:
-    volume.beta.kubernetes.io/storage-class: "standard_1"
+    volume.beta.kubernetes.io/storage-class: "neo4jStandard"
 spec:
   accessModes:
     - ReadWriteOnce
