--- a/section47/storage.yml
+++ b/section47/storage.yml
@@ -1,7 +1,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
-  name: standard_1
+  name: neo4jStandard
 provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp2
