--- a/section47/pv-claim.yml
+++ b/section47/pv-claim.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: neo4j-storage
+  name: gdb-storage
   annotations:
     volume.beta.kubernetes.io/storage-class: "neo4j.standard"
 spec:
