--- a/readonly/neo4j.yml
+++ b/readonly/neo4j.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: neo4j-deployment
 spec:
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -13,8 +13,8 @@ spec:
       - name: neo4j-app
         image: neo4j
         env:
-          - name: NEO4J_dbms_read__only
-            value: “true”
+          - name: NEO4J_dbms_security_auth__enabled
+            value: “false”
         ports:
         - name: neo4j-port
           containerPort: 7474
@@ -26,5 +26,5 @@ spec:
       volumes:
       - name: data
         nfs:
-          server: us-east-1a.fs-15b92a5c.efs.us-east-1.amazonaws.com
+          server: us-east-1a.fs-4bbd2e02.efs.us-east-1.amazonaws.com
           path: /
